// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare const array: readonly number[];
declare const tuple: readonly [number, number];

=====================================output=====================================
declare const array: readonly number[];
declare const tuple: readonly [number, number];

================================================================================
`;

exports[`readonly.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  public readonly foo = 'string';
}

=====================================output=====================================
class Foo {
  public readonly foo = "string";
}

================================================================================
`;
